[gd_scene load_steps=2 format=3 uid="uid://ccclo2ox8gc5g"]

[ext_resource type="Script" uid="uid://b4pm2ikxu1e8" path="res://MultiplayerController.gd" id="1_0fbet"]

[node name="MultiplayerScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 6.0
offset_right = 126.0
offset_bottom = 50.0
text = "HOST"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 58.0
offset_right = 269.0
offset_bottom = 112.0
text = "JOIN"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 112.0
offset_right = 126.0
offset_bottom = 160.0
text = "START GAME"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
